[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interfaces/SceneTransitionRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/main_screen_background.png" type="Texture" id=2]
[ext_resource path="res://Interfaces/label_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/MainScreen.gd" type="Script" id=4]
[ext_resource path="res://Screens/title.svg" type="Texture" id=5]
[ext_resource path="res://Interfaces/ButtonSFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://Screens/main_theme.tres" type="Theme" id=7]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
game_screen_path = "res://Game.tscn"
options_screen_path = "res://Screens/OptionsScreen.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 7
texture = ExtResource( 5 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PadLeft" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 624.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 628.0
margin_right = 1252.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Center"]
margin_left = 50.0
margin_top = 50.0
margin_right = 574.0
margin_bottom = 468.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer"]
margin_right = 524.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer"]
margin_top = 156.0
margin_right = 524.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer"]
margin_top = 312.0
margin_right = 524.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="PadRight" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1256.0
margin_right = 1880.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SceneTransitionRect" parent="." instance=ExtResource( 1 )]

[node name="ButtonSFX" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/PlayButton" to="ButtonSFX" method="play"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/OptionsButton" to="ButtonSFX" method="play"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/QuitButton" to="ButtonSFX" method="play"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Center/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
